# h99

./: LICENSE  README.md  cabal.sandbox.config  h99.cabal  p01.hs  p02.hs  p03.hs  p04.hs  p05.hs  p06.hs  p07.hs  p08.hs  p09.hs  p10.hs  p11.hs  p12.hs  p13.hs  p14.hs  p15.hs  p16.hs  p17.hs  p18.hs  p19.hs  p20.hs
test/: doctest.hs
